--- a/templates/docs.html
+++ b/templates/docs.html
@@ -18,7 +18,7 @@
     <br>
     <span>response: text</span>
     <br>
-    <span>example: {{ SCHEMA }}://{{ HOST }}/filename.ext</span>
+    <span>example: {{ SCHEMA }}://{{ HOST }}/f/filename.ext</span>
     <br>
     <span>curl: curl {{ SCHEMA }}://{{ HOST }} -X POST -F 'file=@"path/to/file"'</span>
 </body>
