--- a/templates/index.html
+++ b/templates/index.html
@@ -74,13 +74,6 @@
             margin: 2px;
         }
 
-        @media screen and (max-width: 700px) {
-            /* .drag-area {
-            width: 100%;
-            height: 100%;
-          } */
-        }
-
         .drag-area.active {
             border: 2px solid #fff;
         }
@@ -94,7 +87,7 @@
             color: #fff;
             width: 150px;
             height: 150px;
-            margin-top: -50px;
+            margin-top: 50px;
         }
 
         .drag-area header {
@@ -120,6 +113,7 @@
             color: #5256ad;
             border-radius: 5px;
             cursor: pointer;
+            margin-bottom: 50px;
         }
 
         .hidden {
@@ -178,6 +172,35 @@
         img {
             width: 100%;
             height: 100%;
+        }
+
+        @media screen and (max-width: 300px) {
+          .drag-area .icon {
+            height: 100px;
+            width: 100px;
+            margin-bottom: 50px;
+          }
+          .drag-area header {
+            font-size: 25px;
+          }
+          .drag-area span {
+            font-size: 20px;
+          }
+          #browse {
+            padding: 10px 20px;
+            font-size: 15px;
+            margin-bottom: 40px;
+          }
+        }
+
+        @media screen and (max-width: 700px) {
+          .drag-area {
+            width: 100%;
+            height: fit-content;
+          }
+          body {
+            height: 100%;
+          }
         }
     </style>
 
