--- a/templates/index.html
+++ b/templates/index.html
@@ -16,9 +16,9 @@
     <div class="drag-area">
         <div class="icon" id="icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512">
-                <path fill="#fff"
-                    d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zM393.4 288H328v112c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16V288h-65.4c-14.3 0-21.4-17.2-11.3-27.3l105.4-105.4c6.2-6.2 16.4-6.2 22.6 0l105.4 105.4c10.1 10.1 2.9 27.3-11.3 27.3z" />
-            </svg>
+        <path fill="#fff"
+          d="M537.6 226.6c4.1-10.7 6.4-22.4 6.4-34.6 0-53-43-96-96-96-19.7 0-38.1 6-53.3 16.2C367 64.2 315.3 32 256 32c-88.4 0-160 71.6-160 160 0 2.7.1 5.4.2 8.1C40.2 219.8 0 273.2 0 336c0 79.5 64.5 144 144 144h368c70.7 0 128-57.3 128-128 0-61.9-44-113.6-102.4-125.4zM393.4 288H328v112c0 8.8-7.2 16-16 16h-48c-8.8 0-16-7.2-16-16V288h-65.4c-14.3 0-21.4-17.2-11.3-27.3l105.4-105.4c6.2-6.2 16.4-6.2 22.6 0l105.4 105.4c10.1 10.1 2.9 27.3-11.3 27.3z" />
+      </svg>
         </div>
         <header>Drag & Drop</header>
         <span>OR</span>
@@ -35,7 +35,6 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-
         * {
             margin: 0;
             padding: 0;
@@ -48,11 +47,11 @@
             user-select: none;
             /* Standard syntax */
         }
-
+        
         #icon {
             pointer-events: none;
         }
-
+        
         body {
             display: flex;
             align-items: center;
@@ -61,7 +60,7 @@
             background: #5256ad;
             overflow: hidden;
         }
-
+        
         .drag-area {
             border: 2px dashed #fff;
             height: 600px;
@@ -73,15 +72,15 @@
             flex-direction: column;
             margin: 2px;
         }
-
+        
         .drag-area.active {
             border: 2px solid #fff;
         }
-
+        
         .drag-area.done {
             border: 2px solid rgb(0, 255, 128);
         }
-
+        
         .drag-area .icon {
             font-size: 100px;
             color: #fff;
@@ -89,20 +88,20 @@
             height: 150px;
             margin-top: 50px;
         }
-
+        
         .drag-area header {
             font-size: 30px;
             font-weight: 500;
             color: #fff;
         }
-
+        
         .drag-area span {
             font-size: 25px;
             font-weight: 500;
             color: #fff;
             margin: 10px 0 15px 0;
         }
-
+        
         #browse {
             padding: 10px 25px;
             font-size: 20px;
@@ -115,11 +114,11 @@
             cursor: pointer;
             margin-bottom: 30px;
         }
-
+        
         .hidden {
             display: none !important;
         }
-
+        
         .progress {
             width: 60%;
             border-radius: 5px;
@@ -128,12 +127,12 @@
             align-items: center;
             justify-content: center;
         }
-
+        
         #progressBar {
             width: 100%;
             height: 20px;
         }
-
+        
         .result {
             width: fit-content;
             max-width: 90%;
@@ -143,7 +142,7 @@
             align-items: center;
             justify-content: center;
         }
-
+        
         #link {
             color: #fff;
             border: 1px solid #fff;
@@ -153,7 +152,7 @@
             font-weight: 500;
             text-align: center;
         }
-
+        
         .copy {
             padding: 10px 10px;
             font-size: 13px;
@@ -169,39 +168,40 @@
             width: 80px;
             margin-left: calc(50% - 40px);
         }
-
+        
         img {
             width: 100%;
             height: 100%;
         }
-
+        
         @media screen and (max-width: 300px) {
-          .drag-area .icon {
-            height: 100px;
-            width: 100px;
-            margin-bottom: 50px;
-          }
-          .drag-area header {
-            font-size: 25px;
-          }
-          .drag-area span {
-            font-size: 20px;
-          }
-          #browse {
-            padding: 10px 20px;
-            font-size: 15px;
-            margin-bottom: 20px;
-          }
+            .drag-area .icon {
+                height: 100px;
+                width: 100px;
+                margin-bottom: 50px;
+            }
+            .drag-area header {
+                font-size: 25px;
+            }
+            .drag-area span {
+                font-size: 20px;
+            }
+            #browse {
+                padding: 10px 20px;
+                font-size: 15px;
+                margin-bottom: 20px;
+            }
         }
-
+        
         @media screen and (max-width: 700px) {
-          .drag-area {
-            width: 100%;
-            height: fit-content;
-          }
-          body {
-            height: 100%;
-          }
+            .drag-area {
+                width: 100%;
+                height: fit-content;
+                padding-bottom: 50px;
+            }
+            body {
+                height: 100%;
+            }
         }
     </style>
 
@@ -244,7 +244,7 @@
             input.click();
         }
 
-        input.addEventListener("change", function (event) {
+        input.addEventListener("change", function(event) {
             dropArea.classList.add("active");
             if (this.files[0] != undefined) {
                 up_load(this.files[0]);
@@ -315,7 +315,7 @@
                     showQR(xhr.responseText);
                 }
             }
-            xhr.upload.addEventListener('progress', function (e) {
+            xhr.upload.addEventListener('progress', function(e) {
                 if (e.lengthComputable) {
                     var percentComplete = (e.loaded / e.total);
                     setProgress(percentComplete);
@@ -349,7 +349,7 @@
             document.execCommand('copy');
             document.body.removeChild(el);
             document.getElementsByClassName('copy')[0].innerHTML = 'Copied';
-            setTimeout(function () { // reset copy button text after 10s
+            setTimeout(function() { // reset copy button text after 10s
                 document.getElementsByClassName('copy')[0].innerHTML = 'Copy';
             }, 10000);
         }
