--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            /* min-height: 100vh; */
+            min-height: 100%;
             background: #5256ad;
             overflow: hidden;
         }
@@ -71,6 +72,10 @@
             justify-content: center;
             flex-direction: column;
             margin: 2px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         
         .drag-area.active {
@@ -195,7 +200,7 @@
         
         @media screen and (max-width: 700px) {
             .drag-area {
-                width: 100%;
+                width: 90%;
                 height: fit-content;
                 padding-bottom: 50px;
             }
